untrack these files

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,11 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+
+#lfs
+Library/PackageCache/com.unity.burst@1.8.4/.Runtime/libburst-llvm-14.so
+Library/ArtifactDB
+Library/PackageCache/com.unity.burst@1.8.4/.Runtime/burst-llvm-14.dll
+Library/PackageCache/com.unity.burst@1.8.4/.Runtime/hostmac/dsymutil
+Library/PackageCache/com.unity.burst@1.8.4/.Runtime/libburst-llvm-10.dylib
+Library/PackageCache/com.unity.burst@1.8.4/.Runtime/libburst-llvm-14.dylib
